--- a/i18n/en/general.json
+++ b/i18n/en/general.json
@@ -1,6 +1,7 @@
 {
+  "thank_you": "Thank You for contacting me",
+  "get_back": "I will get back to you shortly",
   "title_introduction_about_section": "Introduction",
-  "name_about_section": "Chung Nguyen Thanh",
   "title_about_section": "About",
   "title_contact_section": "Contact",
   "title_contact_me_section": "Contact Me",
