--- a/i18n/vi/general.json
+++ b/i18n/vi/general.json
@@ -1,26 +1,27 @@
 {
-  "title_introduction_about_section": "Introduction",
-  "name_about_section": "Chung Nguyen Thanh",
-  "title_about_section": "About",
-  "title_contact_section": "Contact",
-  "title_contact_me_section": "Contact Me",
-  "get_in_touch_contact_section": "Get in touch",
-  "feel_free_contact_section": "Feel free to get in touch",
-  "hint_your_name_contact_section": "Your name",
-  "hint_your_email_contact_section": "Your email",
-  "hint_message_contact_section": "Type your message",
-  "btn_send_contact_section": "Send",
-  "title_experience_section": "Work Experience",
-  "title_project_section": "Projects",
-  "title_personal_projects_project_section": "Personal Projects",
-  "title_client_projects_project_section": "Work/Client Projects",
-  "m_title_personal_projects_project_section": "Personal",
-  "m_title_client_projects_project_section": "Work/Client",
-  "title_all_projects_project_section": "All Projects",
-  "title_skill_section": "Skills",
-  "hi_about_section": "Hi there! I'm ",
-  "introduce_home_section1": "I am a Software Development Engineer for Consumer Product Line (Phone, Set-top Box,...) and a Flutter Developer.",
-  "introduce_home_section2": "I build system applications for AOSP, ATV in the Consumer Product Line and build websites and interactive software applications that run on multiple platforms and devices.",
-  "browse_projects_home_section": "Browse Projects",
-  "required_input_field" : "This field is required"
+  "thank_you": "Cảm ơn bạn đã liên hệ với tôi",
+  "get_back": "Tôi sẽ liên hệ lại với bạn sớm",
+  "title_introduction_about_section": "Giới thiệu",
+  "title_about_section": "Thông tin cá nhân",
+  "title_contact_section": "Liên hệ",
+  "title_contact_me_section": "Liên hệ với tôi",
+  "get_in_touch_contact_section": "Liên hệ ngay",
+  "feel_free_contact_section": "Hãy thoải mái liên hệ với tôi",
+  "hint_your_name_contact_section": "Họ và tên của bạn",
+  "hint_your_email_contact_section": "Địa chỉ email của bạn",
+  "hint_message_contact_section": "Nhập nội dung tin nhắn",
+  "btn_send_contact_section": "Gửi",
+  "title_experience_section": "Kinh nghiệm làm việc",
+  "title_project_section": "Dự án",
+  "title_personal_projects_project_section": "Dự án cá nhân",
+  "title_client_projects_project_section": "Dự án công việc",
+  "m_title_personal_projects_project_section": "Cá nhân",
+  "m_title_client_projects_project_section": "Công việc",
+  "title_all_projects_project_section": "Tất cả dự án",
+  "title_skill_section": "Kỹ năng",
+  "hi_about_section": "Xin chào! Tôi là ",
+  "introduce_home_section1": "Tôi là Kỹ sư Phát triển Phần mềm cho Dòng sản phẩm Tiêu dùng (Điện thoại, Set-top Box,...) và là một Lập trình viên Flutter.",
+  "introduce_home_section2": "Tôi xây dựng các ứng dụng hệ thống cho AOSP, ATV trong Dòng sản phẩm Tiêu dùng và xây dựng các trang web và ứng dụng phần mềm tương tác chạy trên nhiều nền tảng và thiết bị.",
+  "browse_projects_home_section": "Các dự án",
+  "required_input_field" : "Trường này là bắt buộc"
 }
