update UI Tablet and app_bar_lang button

--- a/i18n/vi/general.json
+++ b/i18n/vi/general.json
@@ -1,4 +1,6 @@
 {
+  "vietnam" : "Tiếng Việt",
+  "english" : "Tiếng Anh",
   "thank_you": "Cảm ơn bạn đã liên hệ với tôi",
   "get_back": "Tôi sẽ liên hệ lại với bạn sớm",
   "title_introduction_about_section": "Giới thiệu",
