--- a/i18n/en/general.json
+++ b/i18n/en/general.json
@@ -1,4 +1,6 @@
 {
+  "vietnam" : "Vietnamese",
+  "english" : "English",
   "thank_you": "Thank You for contacting me",
   "get_back": "I will get back to you shortly",
   "title_introduction_about_section": "Introduction",
