--- a/i18n/vi/tabs.json
+++ b/i18n/vi/tabs.json
@@ -1,11 +1,11 @@
 {
   "tabs": [
-    "Home",
-    "About",
-    "Skills",
-    "Experience",
-    "Projects",
-    "Contact",
-    "Download CV"
+    "Trang chủ",
+    "Về tôi",
+    "Kỹ năng",
+    "Kinh nghiệm",
+    "Các dự án",
+    "Liên hệ",
+    "Tải về CV"
   ]
 }
