--- a/i18n/vi/general.json
+++ b/i18n/vi/general.json
@@ -1,6 +1,7 @@
 {
+  "language": "Ngôn ngữ",
   "vietnam" : "Tiếng Việt",
-  "english" : "Tiếng Anh",
+  "english" : "English",
   "thank_you": "Cảm ơn bạn đã liên hệ với tôi",
   "get_back": "Tôi sẽ liên hệ lại với bạn sớm",
   "title_introduction_about_section": "Giới thiệu",
